Added end point definitions for games
